--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.18.0",
     "jszip": "^3.10.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
